# agent-mail

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  production.yml  release.yml  staging.yml
docs/: deployment.md  lightsail.md  mcp.md  plan.md  progress.md  staging-setup.md  testing.md
docs/decisions/: 0001-repository-scope.md  0002-real-validation-only.md  0003-staging-before-production.md
rust/agent-mail-server/: Cargo.toml
rust/agent-mail-server/src/: config.rs  http.rs  main.rs  mcp.rs
scripts/: deployed_mcp_smoke.sh  public_mcp_smoke.sh  real_postgres_http_test.sh  real_postgres_mcp_test.sh
src/: config.rs  error.rs  http.rs  id.rs  main.rs  mcp.rs  store.rs
